# Project-INF201

./: .gitignore  LICENSE  README.md  axes_couleur.eps  dune-project  execProjet.sh  fail.ml  gimp_123.xcf  inf201_ElKortbi_Tabolskii_Bendouha_Caille_Crelerot_Q1-Q9.ml  ocaml_use_projet.sh  projet.ml  rendu_etd.ml  specification_projet.odt  test.ml
.old/: fail.ml
.trash/: .gitignore  inf201_ElKortbi_Tabolskii_Bendouha_Caille_Crelerot_Q1-Q9_old.txt
.trash/test/: dune  test.ml
lib/: dune  lib.ml
lib/constants/: constants.ml  dune
lib/types/: types.ml
lib/utils/: dune  utils.ml
lib/utils/case/: case.ml  caseList.ml  caseMath.ml  caseString.ml  dune
lib/utils/listes/: sequences.ml
lib/utils/math/: dune  math.ml
lib/utils/output/: dune  output.ml
lib/utils/string/: dune  stringUtils.ml
projet_04_03_2024/: execProjet.sh  inf201_ElKortbi_Tabolskii_Bendouha_Caille_Crelerot_Q1-Q9.ml  inf201_ElKortbi_Tabolskii_Bendouha_Caille_Crelerot_Q1_Q9.ml  lien_dans_git.ml  specification_projet_de_q1_9.odt  test.ml
projet_04_03_2024/gimp/: axes_couleur.xcf
src/: inf201_ElKortbi_Tabolskii_Bendouha_Caille_Crelerot.ml  inf201_ElKortbi_Tabolskii_Bendouha_Caille_Crelerot_Q1-Q9.ml
src/types/: types.ml
src/utils/: affichage.ml  utils.ml
test/: dune  test.ml
